gateway docs done
