# src/controllers/gateway.controller.ts
@@ -29,6 +29,12 @@ declare global {
 export const gatewayController = {
     //  Vehicle Service Gateway Methods
     async getVehicles(req: Request, res: Response) {
+    /** 
+      #swagger.tags = ['Gateway - Vehicle Service']
+      #swagger.summary = 'Get all vehicles'
+      #swagger.security =[{
+        "bearerAuth":[]}]
+     */
         try {
             const serviceResponse = await axios.get(`${VEHICLE_SERVICE_URL}/vehicles`, {
             });
@@ -39,14 +45,22 @@ export const gatewayController = {
             }
             );
         } catch (error: any) { // Add type annotation to error
-            console.error("Error fetching vehicles:", error);
-            return res.status(500).json({
-                message: "Failed to fetch vehicles",
-                data: error,
+            console.error("Error fetching vehicles:");
+            return res.status(404).json({
+                message: "Vehicle Service in unavailable",
             })
         }
     },
     async createVehicle(req: Request, res: Response) {
+    /** 
+      #swagger.tags = ['Gateway - Vehicle Service']
+      #swagger.summary = 'Create vehicle'
+      #swagger.requestBody = {
+        required: true,
+        schema: {$ref: "#/components/schemas/CreateVehicleSchema"}}
+      #swagger.security =[{
+        "bearerAuth":[]}]
+     */
         const requestBody: createVehicleRequest={
             type: req.body.type,
             plate_number: req.body.plate_number,
@@ -68,6 +82,17 @@ export const gatewayController = {
             })
     },    
     async getVehicleById(req: Request, res: Response){
+    /** 
+      #swagger.tags = ['Gateway - Vehicle Service']
+      #swagger.summary = 'Get vehicle by ID'
+      #swagger.parameters['id'] = {
+      in: 'query',
+      description: 'Vehicle ID to fetch',
+      required: true,
+      type: 'string'}
+      #swagger.security =[{
+        "bearerAuth":[]}]
+     */
         const vehicleId = req.query.id as string;  
         if (!vehicleId) {
             return res.status(400).json({
@@ -101,6 +126,20 @@ export const gatewayController = {
         }
     },
     async updateVehicle(req: Request, res: Response) {
+    /** 
+      #swagger.tags = ['Gateway - Vehicle Service']
+      #swagger.summary = 'Get vehicle by ID'
+      #swagger.parameters['id'] = {
+      in: 'query',
+      description: 'Vehicle ID to update',
+      required: true,
+      type: 'string'}
+      #swagger.requestBody = {
+        required: true,
+        schema: {$ref: "#/components/schemas/UpdateVehicleSchema"}}
+      #swagger.security =[{
+        "bearerAuth":[]}]
+     */
         const vehicleId = req.query.id;
         console.log("Updating vehicle with ID:", vehicleId);
         try {
@@ -120,6 +159,17 @@ export const gatewayController = {
 
     },
     async deleteVehicleById(req: Request, res: Response) {
+    /** 
+      #swagger.tags = ['Gateway - Vehicle Service']
+      #swagger.summary = 'Get vehicle by ID'
+      #swagger.parameters['id'] = {
+      in: 'query',
+      description: 'Vehicle ID to delete',
+      required: true,
+      type: 'string'}
+      #swagger.security =[{
+        "bearerAuth":[]}]
+     */
         const vehicleId = req.query.id as string;
         if (!vehicleId){
             return res.status(400).json({
@@ -143,4 +193,8 @@ export const gatewayController = {
             
         }
     }
+
+    // Driver Service Gateway Methods
+
+    // Route Service Gateway Methods
 };
