# src/docs/swagger_output.json
@@ -8,13 +8,29 @@
   "servers": [
     {
       "url": "http://localhost:3001/auth",
-      "description": "Local Development Server"
+      "description": "Auth Endpoints"
+    },
+    {
+      "url": "http://localhost:3001/api",
+      "description": "Gateway Endpoints"
     }
   ],
   "tags": [
     {
       "name": "Auth",
       "description": "Authentication endpoints"
+    },
+    {
+      "name": "Gateway - Vehicle Service",
+      "description": "endpoints ke vehicle service"
+    },
+    {
+      "name": "Gateway - Driver Service",
+      "description": "endpoints ke driver service"
+    },
+    {
+      "name": "Gateway - Route Service",
+      "description": "endpoints ke route service"
     }
   ],
   "paths": {
@@ -48,6 +64,7 @@
         "tags": [
           "Auth"
         ],
+        "summary": "Registrasi User",
         "description": "",
         "responses": {
           "200": {
@@ -79,6 +96,7 @@
         "tags": [
           "Auth"
         ],
+        "summary": "Login User",
         "description": "",
         "responses": {
           "200": {
@@ -110,14 +128,192 @@
           }
         }
       }
+    },
+    "/vehicle/all": {
+      "get": {
+        "tags": [
+          "Gateway - Vehicle Service"
+        ],
+        "summary": "Get all vehicles",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/vehicle/create": {
+      "post": {
+        "tags": [
+          "Gateway - Vehicle Service"
+        ],
+        "summary": "Create vehicle",
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateVehicleSchema"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateVehicleSchema"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/vehicle/": {
+      "get": {
+        "tags": [
+          "Gateway - Vehicle Service"
+        ],
+        "summary": "Get all vehicles",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "Vehicle ID to fetch",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/vehicle/update": {
+      "put": {
+        "tags": [
+          "Gateway - Vehicle Service"
+        ],
+        "summary": "Get vehicle by ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "Vehicle ID to update",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateVehicleSchema"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateVehicleSchema"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/vehicle/delete": {
+      "delete": {
+        "tags": [
+          "Gateway - Vehicle Service"
+        ],
+        "summary": "Get vehicle by ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "Vehicle ID to delete",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
     }
   },
   "components": {
     "securitySchemes": {
       "bearerAuth": {
         "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
+        "scheme": "bearer"
       }
     },
     "schemas": {
@@ -167,6 +363,46 @@
         },
         "xml": {
           "name": "RegisterRequest"
+        }
+      },
+      "CreateVehicleSchema": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "example": "car"
+          },
+          "plate_number": {
+            "type": "string",
+            "example": "B 6924 ZY"
+          },
+          "status": {
+            "type": "string",
+            "example": "Available"
+          }
+        },
+        "xml": {
+          "name": "CreateVehicleSchema"
+        }
+      },
+      "UpdateVehicleSchema": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "example": "car"
+          },
+          "plate_number": {
+            "type": "string",
+            "example": "B 6924 ZY"
+          },
+          "status": {
+            "type": "string",
+            "example": "InUse"
+          }
+        },
+        "xml": {
+          "name": "UpdateVehicleSchema"
         }
       }
     }
